Lots of work filling in dates of past and future talks, and slides. Now just need to add Introduction to PySpark preso and I'm done.

--- a/talks/index.html
+++ b/talks/index.html
@@ -114,13 +114,13 @@
 		<div class="talks-holder">
 			<div class="container">
 				<div class="talks-heading">
-					<h3>Talks</h3>
+					<h3>Presentations</h3>
 				</div>
 				<div class="tab-holder">
 					<ul class="tabs">
-						<li class="active list-1" rel="tab1">Training a Model</li>
-						<li class="list-2" rel="tab2">Building a Web Application</li>
-						<li class="list-3" rel="tab3">Architecture</li>
+						<li class="active list-1" rel="tab1">Agile Data Science 2.0</li>
+						<!--<li class="list-2" rel="tab2">Building a Web Application</li>
+						<li class="list-3" rel="tab3">Architecture</li>-->
 					</ul>
 					<div class="tab_container">
 						<h3 class="d_active tab_drawer_heading" rel="tab1">Training a Model</h3>
@@ -132,8 +132,20 @@
 										<div class="col-sm-6">
 											<div class="talks-contents">
 												<h3>Agile Data Science 2.0</h3>
-												<p>Agile Data Science 2.0 Russell Jurney 2 Data Engineer Data Scientist Visualization Software Engineer 85% 85% 85% Writer 85% Teacher 50% Russell Jurney is a veteran data scientist and thought leader. He coined the term Agile Data Science in the book of that name from O'Reilly in 2012, which outlines the first agile development methodology for data science. </p>
-												<p>Russell has constructed numerous full-stack analytics products over the past ten years and now works with clients helping them extract value from their data assets. Russell Jurney Skill Principal Consultant at Data Syndrome Russell Jurney </p>
+												<p>Building Full Stack Data Analytics Applications with Kafka and Spark</p>
+												<p>Agile Data Science 2.0 (O’Reilly 2017) defines a methodology and a
+													software stack with which to apply the methods. <b>The methodology</b>
+													seeks to deliver data products in short sprints by going meta and
+													putting the focus on the applied research process itself. <b>The
+														stack</b> is but an example of one meeting the requirements that
+													it be utterly scalable and utterly efficient in use by application
+													developers as well as data engineers. It includes everything needed
+													to build a full-blown predictive system: Apache Spark, Apache Kafka,
+													Apache Incubating Airflow, MongoDB, ElasticSearch, Apache Parquet,
+													Python/Flask, JQuery. This talk will cover the full lifecycle of
+													large data application development and will show how to use lessons
+													from agile software engineering to apply data science using this
+													full-stack to build better analytics applications.</p>
 												<!--<div class="talks-button">
 													<a class="btn read-btn" href="#">Read More</a>
 												</div>-->
@@ -141,7 +153,7 @@
 										</div>
 										<div class="col-sm-6">
 											<div class="talks-slideshow">
-												<iframe src="http://www.slideshare.net/slideshow/embed_code/key/8jLTIQEPSL2K7J" width="100%" height="390" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" allowfullscreen> </iframe> 		
+												<iframe width="100%" height="390" src="https://www.youtube.com/embed/QqXC0k7sxRI" frameborder="0" allowfullscreen></iframe>
 											</div>
 										</div>
 									</div>
@@ -307,155 +319,41 @@
 																	</tr>
 																</thead>
 																<tbody>
+																	<tr>
+																		<td class="date">Feb 8, 2017</td>
+																		<td><a href="http://bdam.io/meetups/cask-market-airbnb-dataportal-agile-data-science/">Big Data Application Meetup</a></td>
+																		<td>Agile Data Science</td>
+																		<td><a href="https://www.youtube.com/watch?v=QqXC0k7sxRI">Discussing the agile development of full-stack analytics application.</a></td>
+																	</tr>
+																	<tr>
+																		<td class="date">Feb 15, 2017</td>
+																		<td><a href="https://www.meetup.com/sfpython/events/230254213/">SF Python Meetup</a></td>
+																		<td>Introduction to PySpark</td>
+																		<td><a href="https://www.slideshare.net/rjurney/introduction-to-pyspark">An introduction to data processing and machine learning with Apache PySpark.</a></td>
+																	</tr>
 																	<tr class="active">
-																		<td class="date">15 Feb 2017</td>
-																		<td>Maecenas aliquet</td>
-																		<td>Agile Data Science </td>
-																		<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
+																		<td class="date">Feb 24, 2017</td>
+																		<td><a href="https://www.meetup.com/Big-Data-Science/events/234127846/">Big Data Science Meetup</a></td>
+																		<td>Agile Data Science</td>
+																		<td><a href="https://www.slideshare.net/rjurney/agile-data-science-20">Discussing the agile development of full-stack analytics application.</a></td>
 																	</tr>
 																	<tr>
-																		<td class="date">16 Feb 2017</td>
-																		<td>Velit vel turpis Mauris neque</td>
+																		<td class="date">Mar 3, 2017</td>
+																		<td><a href="https://www.meetup.com/SF-Data-Science/">SF Data Science Meetup</a></td>
 																		<td>Agile Data Science</td>
-																		<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
+																		<td><a href="https://www.slideshare.net/rjurney/agile-data-science-20">Discussing the agile development of full-stack analytics application.</a></td>
 																	</tr>
 																	<tr>
-																		<td class="date">20 Feb 2017</td>
-																		<td>Petus malesuada nec ultricies sit</td>
-																		<td>Agile Data Science</td>
-																		<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
+																		<td class="date">Mar 14, 2017</td>
+																		<td><a href="https://www.meetup.com/Bay-Area-Apache-Airflow-Incubating-Meetup/events/237412864/">Airflow Meetup @ Paypal</a></td>
+																		<td>Predictive Analytics with Airflow and PySpark</td>
+																		<td>How to wrangle PySpark scripts into a full blown analytics application using Airflow.</td>
 																	</tr>
 																	<tr>
-																		<td class="date">25 Feb 2017</td>
-																		<td>Smet porttitor mattis enim</td>
+																		<td class="date">Apr 13, 2017</td>
+																		<td><a href="https://www.meetup.com/Metis-San-Francisco-Data-Science/">Metis San Francisco Data Science</a></td>
 																		<td>Agile Data Science</td>
-																		<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-																	</tr>
-																	<tr>
-																		<td class="date">28 Feb 2017</td>
-																		<td>In massa libero interdum</td>
-																		<td>Agile Data Science</td>
-																		<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-																	</tr>
-																	<tr>
-																		<td class="date">28 Feb 2017</td>
-																		<td>In massa libero interdum</td>
-																		<td>Agile Data Science</td>
-																		<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-																	</tr>
-																	<tr>
-																		<td class="date">28 Feb 2017</td>
-																		<td>In massa libero interdum</td>
-																		<td>Agile Data Science</td>
-																		<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-																	</tr>
-																	<tr>
-																		<td class="date">28 Feb 2017</td>
-																		<td>In massa libero interdum</td>
-																		<td>Agile Data Science</td>
-																		<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-																	</tr>
-																	<tr>
-																		<td class="date">28 Feb 2017</td>
-																		<td>In massa libero interdum</td>
-																		<td>Agile Data Science</td>
-																		<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-																	</tr>
-																	<tr>
-																		<td class="date">28 Feb 2017</td>
-																		<td>In massa libero interdum</td>
-																		<td>Agile Data Science</td>
-																		<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-																	</tr>
-																	<tr>
-																		<td class="date">28 Feb 2017</td>
-																		<td>In massa libero interdum</td>
-																		<td>Agile Data Science</td>
-																		<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-																	</tr>
-																	<tr>
-																		<td class="date">28 Feb 2017</td>
-																		<td>In massa libero interdum</td>
-																		<td>Agile Data Science</td>
-																		<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-																	</tr>
-																	<tr>
-																		<td class="date">28 Feb 2017</td>
-																		<td>In massa libero interdum</td>
-																		<td>Agile Data Science</td>
-																		<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-																	</tr>
-																	<tr>
-																		<td class="date">28 Feb 2017</td>
-																		<td>In massa libero interdum</td>
-																		<td>Agile Data Science</td>
-																		<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-																	</tr>
-																	<tr>
-																		<td class="date">28 Feb 2017</td>
-																		<td>In massa libero interdum</td>
-																		<td>Agile Data Science</td>
-																		<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-																	</tr>
-																	<tr>
-																		<td class="date">28 Feb 2017</td>
-																		<td>In massa libero interdum</td>
-																		<td>Agile Data Science</td>
-																		<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-																	</tr>
-																	<tr>
-																		<td class="date">28 Feb 2017</td>
-																		<td>In massa libero interdum</td>
-																		<td>Agile Data Science</td>
-																		<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-																	</tr>
-																	<tr>
-																		<td class="date">28 Feb 2017</td>
-																		<td>In massa libero interdum</td>
-																		<td>Agile Data Science</td>
-																		<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-																	</tr>
-																	<tr>
-																		<td class="date">28 Feb 2017</td>
-																		<td>In massa libero interdum</td>
-																		<td>Agile Data Science</td>
-																		<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-																	</tr>
-																	<tr>
-																		<td class="date">28 Feb 2017</td>
-																		<td>In massa libero interdum</td>
-																		<td>Agile Data Science</td>
-																		<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-																	</tr>
-																	<tr>
-																		<td class="date">28 Feb 2017</td>
-																		<td>In massa libero interdum</td>
-																		<td>Agile Data Science</td>
-																		<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-																	</tr>
-																	<tr>
-																		<td class="date">28 Feb 2017</td>
-																		<td>In massa libero interdum</td>
-																		<td>Agile Data Science</td>
-																		<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-																	</tr>
-																	<tr>
-																		<td class="date">28 Feb 2017</td>
-																		<td>In massa libero interdum</td>
-																		<td>Agile Data Science</td>
-																		<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-																	</tr>
-																	<tr>
-																		<td class="date">28 Feb 2017</td>
-																		<td>In massa libero interdum</td>
-																		<td>Agile Data Science</td>
-																		<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-																	</tr>
-																	<tr>
-																		<td class="date">28 Feb 2017</td>
-																		<td>In massa libero interdum</td>
-																		<td>Agile Data Science</td>
-																		<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
+																		<td><a href="https://www.slideshare.net/rjurney/agile-data-science-20">Discussing the agile development of full-stack analytics application.</a></td>
 																	</tr>
 																</tbody>
 															</table>
@@ -474,17 +372,17 @@
 										<div class="row">
 											<div class="col-sm-6 col-md-3">
 												<div class="videos video-1">
-													<iframe src="https://player.vimeo.com/video/202336113" width="100%" height="200" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>															                                            	
+													<iframe width="100%" height="200" src="https://www.youtube.com/embed/QqXC0k7sxRI" frameborder="0" allowfullscreen></iframe>
 												</div>
 											</div>
 											<div class="col-sm-6 col-md-3">
 												<div class="videos video-2">
-													<iframe src="https://player.vimeo.com/video/202336113" width="100%" height="200" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>												
+													<iframe src="//www.slideshare.net/slideshow/embed_code/key/8jLTIQEPSL2K7J" width="100%" height="200" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
 												</div>
 											</div>
 											<div class="col-sm-6 col-md-3">
 												<div class="videos video-3">
-													<iframe src="https://player.vimeo.com/video/202336113" width="100%" height="200" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>												
+													<iframe src="//www.slideshare.net/slideshow/embed_code/key/xdw6dpQFVOCVCs" width="100%" height="200" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
 												</div>
 											</div>
 											<div class="col-sm-6 col-md-3">
