--- a/book/index.html
+++ b/book/index.html
@@ -50,7 +50,8 @@
                                             <li><a href="/people">People</a></li>
                                             <li class="active"><a href="/book">Book</a></li>
                                             <li><a href="/training">Corporate Training</a></li>
-                                            <li><a href="/video">video Training</a></li>
+                                            <li><a href="/video">Video Training</a></li>
+                                            <li><a href="/talks">Presentations</a></li>
                                         </ul>
                                     </div>
                                 </nav>
@@ -220,11 +221,12 @@ late.</li>
             </div>
             <div class="foot-menu text-center">
                 <ul class="list-inline">
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/people">People</a></li>
-                    <li><a href="/book">Book</a></li>
-                    <li><a href="/training">Corporate Training</a></li>
-                    <li><a href="/video">Video Training</a></li>
+						<li><a href="/">Home</a></li>
+						<li><a href="/people">People</a></li>
+						<li><a href="/book">Book</a></li>
+						<li><a href="/training">Corporate Training</a></li>
+						<li><a href="/video">Video Training</a></li>
+						<li><a href="/talks">Presentations</a></li>
                 </ul>
             </div>
             <div class="foot-copy text-center">
