--- a/people.html
+++ b/people.html
@@ -49,7 +49,8 @@
                                             <li class="active"><a href="/people">People</a></li>
                                             <li><a href="/book">Book</a></li>
                                             <li><a href="/training">Corporate Training</a></li>
-											<li><a href="/video">video Training</a></li>
+											<li><a href="/video">Video Training</a></li>
+                                            <li><a href="/talks">Presentations</a></li>
                                         </ul>
                                     </div>
                         		</nav>
@@ -141,11 +142,12 @@
             </div>
             <div class="foot-menu text-center">
                 <ul class="list-inline">
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/people">People</a></li>
-                    <li><a href="/book">Book</a></li>
-                    <li><a href="/training">Corporate Training</a></li>
-                    <li><a href="/video">Video Training</a></li>
+						<li><a href="/">Home</a></li>
+						<li><a href="/people">People</a></li>
+						<li><a href="/book">Book</a></li>
+						<li><a href="/training">Corporate Training</a></li>
+						<li><a href="/video">Video Training</a></li>
+						<li><a href="/talks">Presentations</a></li>
                 </ul>
             </div>
             <div class="foot-copy text-center">
