--- a/talks.html
+++ b/talks.html
@@ -54,11 +54,12 @@
 										</div>                                                                                                                   
 										<div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
 											<ul class="nav navbar-nav navbar-right">
-												<li><a href="index.html">Home</a></li>
-												<li><a href="people.html">People</a></li>
-												<li><a href="book.html">Book</a></li>
-												<li><a href="corporate-training.html">Corporate Training</a></li>
-												<li><a href="video-training.html">video Training</a></li>
+												<li><a href="/">Home</a></li>
+												<li><a href="/people">People</a></li>
+												<li><a href="/book">Book</a></li>
+												<li><a href="/training">Corporate Training</a></li>
+												<li><a href="/video">Video Training</a></li>
+												<li class="active"><a href="/talks">Presentations</a></li>
 											</ul>
 										</div>
 									</nav>
@@ -133,7 +134,7 @@
 											<div class="talks-contents">
 												<h3>Agile Data Science 2.0</h3>
 												<p>Building Full Stack Data Analytics Applications with Kafka and Spark</p>
-												<p>Agile Data Science 2.0 (O’Reilly 2017) defines a methodology and a
+												<p style="text-align: justify;">Agile Data Science 2.0 (O’Reilly 2017) defines a methodology and a
 													software stack with which to apply the methods. <b>The methodology</b>
 													seeks to deliver data products in short sprints by going meta and
 													putting the focus on the applied research process itself. <b>The
@@ -426,9 +427,12 @@
 				</div>
 				<div class="foot-menu text-center">
 					<ul class="list-inline">
-						<li><a href="index.html">Home</a></li>
-						<li><a href="people.html">People</a></li>
-						<li><a href="book.html">Book</a></li>
+						<li><a href="/">Home</a></li>
+						<li><a href="/people">People</a></li>
+						<li><a href="/book">Book</a></li>
+						<li><a href="/training">Corporate Training</a></li>
+						<li><a href="/video">Video Training</a></li>
+						<li><a href="/talks">Presentations</a></li>
 					</ul>
 				</div>
 				<div class="foot-copy text-center">
