--- a/training/index.html
+++ b/training/index.html
@@ -58,7 +58,8 @@
 												<li><a href="/people">People</a></li>
 												<li><a href="/book">Book</a></li>
 												<li class="active"><a href="/training">Corporate Training</a></li>
-												<li><a href="/video">video Training</a></li>
+												<li><a href="/video">Video Training</a></li>
+												<li><a href="/talks">Presentations</a></li>
 											</ul>
 										</div>
 									</nav>
@@ -357,6 +358,7 @@
 						<li><a href="/book">Book</a></li>
 						<li><a href="/training">Corporate Training</a></li>
 						<li><a href="/video">Video Training</a></li>
+						<li><a href="/talks">Presentations</a></li>
 					</ul>
 				</div>
 				<div class="foot-copy text-center">
