--- a/talks.html
+++ b/talks.html
@@ -38,7 +38,7 @@
 						<div class="row">
 							<div class="col-sm-3 col-xs-8">
 								<div class="logo">
-									<a href="index.html"><img src="img/logo.png" class="img-responsive" alt="Logo"/></a>
+									<a href="/"><img src="img/logo.png" class="img-responsive" alt="Logo"/></a>
 								</div>
 							</div>
 							<div class="col-sm-9">
@@ -422,7 +422,7 @@
 						<li><a href="http://twitter.com/rjurney"><img src="img/share-2.png" class="img-responsive" target="_blank" /></a></li>
 						<li><a href="http://linkedin.com/in/russelljurney"><img src="img/share-3.png" class="img-responsive"target="_blank" /></a></li>
 						<li><a href="https://medium.com/@rjurney"><img src="img/share-4.png" class="img-responsive" target="_blank" /></a></li>
-						<li><a href="people.html"><img src="img/share-5.png" class="img-responsive" target="_blank"/></a></li>
+						<li><a href="/people"><img src="img/share-5.png" class="img-responsive" target="_blank"/></a></li>
 					</ul>
 				</div>
 				<div class="foot-menu text-center">
