--- a/talks.html
+++ b/talks.html
@@ -124,7 +124,7 @@
 						<!--<li class="list-3" rel="tab3">Architecture</li>-->
 					</ul>
 					<div class="tab_container">
-						<h3 class="d_active tab_drawer_heading" rel="tab1">Training a Model</h3>
+						<h3 class="d_active tab_drawer_heading" rel="tab1">Agile Data Science 2.0</h3>
 						<div id="tab1" class="tab_content">
 							<div class="talks-main-holder">
 								<div class="talks-description-holder">
