--- a/talks.html
+++ b/talks.html
@@ -248,155 +248,41 @@
 												</tr>
 											</thead>
 											<tbody>
+												<tr>
+													<td class="date">Feb 8, 2017</td>
+													<td><a href="http://bdam.io/meetups/cask-market-airbnb-dataportal-agile-data-science/">Big Data Application Meetup</a></td>
+													<td>Agile Data Science</td>
+													<td><a href="https://www.youtube.com/watch?v=QqXC0k7sxRI">Discussing the agile development of full-stack analytics application.</a></td>
+												</tr>
+												<tr>
+													<td class="date">Feb 15, 2017</td>
+													<td><a href="https://www.meetup.com/sfpython/events/230254213/">SF Python Meetup</a></td>
+													<td>Introduction to PySpark</td>
+													<td><a href="https://www.slideshare.net/rjurney/introduction-to-pyspark">An introduction to data processing and machine learning with Apache PySpark.</a></td>
+												</tr>
 												<tr class="active">
-													<td class="date">15 Feb 2017</td>
-													<td>Maecenas aliquet</td>
-													<td>Agile Data Science </td>
-													<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
+													<td class="date">Feb 24, 2017</td>
+													<td><a href="https://www.meetup.com/Big-Data-Science/events/234127846/">Big Data Science Meetup</a></td>
+													<td>Agile Data Science</td>
+													<td><a href="https://www.slideshare.net/rjurney/agile-data-science-20">Discussing the agile development of full-stack analytics application.</a></td>
 												</tr>
 												<tr>
-													<td class="date">16 Feb 2017</td>
-													<td>Velit vel turpis Mauris neque</td>
+													<td class="date">Mar 3, 2017</td>
+													<td><a href="https://www.meetup.com/SF-Data-Science/">SF Data Science Meetup</a></td>
 													<td>Agile Data Science</td>
-													<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
+													<td><a href="https://www.slideshare.net/rjurney/agile-data-science-20">Discussing the agile development of full-stack analytics application.</a></td>
 												</tr>
 												<tr>
-													<td class="date">20 Feb 2017</td>
-													<td>Petus malesuada nec ultricies sit</td>
-													<td>Agile Data Science</td>
-													<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
+													<td class="date">Mar 14, 2017</td>
+													<td><a href="https://www.meetup.com/Bay-Area-Apache-Airflow-Incubating-Meetup/events/237412864/">Airflow Meetup @ Paypal</a></td>
+													<td>Predictive Analytics with Airflow and PySpark</td>
+													<td>How to wrangle PySpark scripts into a full blown analytics application using Airflow.</td>
 												</tr>
 												<tr>
-													<td class="date">25 Feb 2017</td>
-													<td>Smet porttitor mattis enim</td>
+													<td class="date">Apr 13, 2017</td>
+													<td><a href="https://www.meetup.com/Metis-San-Francisco-Data-Science/">Metis San Francisco Data Science</a></td>
 													<td>Agile Data Science</td>
-													<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-												</tr>
-												<tr>
-													<td class="date">28 Feb 2017</td>
-													<td>In massa libero interdum</td>
-													<td>Agile Data Science</td>
-													<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-												</tr>
-												<tr>
-													<td class="date">28 Feb 2017</td>
-													<td>In massa libero interdum</td>
-													<td>Agile Data Science</td>
-													<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-												</tr>
-												<tr>
-													<td class="date">28 Feb 2017</td>
-													<td>In massa libero interdum</td>
-													<td>Agile Data Science</td>
-													<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-												</tr>
-												<tr>
-													<td class="date">28 Feb 2017</td>
-													<td>In massa libero interdum</td>
-													<td>Agile Data Science</td>
-													<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-												</tr>
-												<tr>
-													<td class="date">28 Feb 2017</td>
-													<td>In massa libero interdum</td>
-													<td>Agile Data Science</td>
-													<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-												</tr>
-												<tr>
-													<td class="date">28 Feb 2017</td>
-													<td>In massa libero interdum</td>
-													<td>Agile Data Science</td>
-													<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-												</tr>
-												<tr>
-													<td class="date">28 Feb 2017</td>
-													<td>In massa libero interdum</td>
-													<td>Agile Data Science</td>
-													<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-												</tr>
-												<tr>
-													<td class="date">28 Feb 2017</td>
-													<td>In massa libero interdum</td>
-													<td>Agile Data Science</td>
-													<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-												</tr>
-												<tr>
-													<td class="date">28 Feb 2017</td>
-													<td>In massa libero interdum</td>
-													<td>Agile Data Science</td>
-													<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-												</tr>
-												<tr>
-													<td class="date">28 Feb 2017</td>
-													<td>In massa libero interdum</td>
-													<td>Agile Data Science</td>
-													<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-												</tr>
-												<tr>
-													<td class="date">28 Feb 2017</td>
-													<td>In massa libero interdum</td>
-													<td>Agile Data Science</td>
-													<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-												</tr>
-												<tr>
-													<td class="date">28 Feb 2017</td>
-													<td>In massa libero interdum</td>
-													<td>Agile Data Science</td>
-													<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-												</tr>
-												<tr>
-													<td class="date">28 Feb 2017</td>
-													<td>In massa libero interdum</td>
-													<td>Agile Data Science</td>
-													<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-												</tr>
-												<tr>
-													<td class="date">28 Feb 2017</td>
-													<td>In massa libero interdum</td>
-													<td>Agile Data Science</td>
-													<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-												</tr>
-												<tr>
-													<td class="date">28 Feb 2017</td>
-													<td>In massa libero interdum</td>
-													<td>Agile Data Science</td>
-													<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-												</tr>
-												<tr>
-													<td class="date">28 Feb 2017</td>
-													<td>In massa libero interdum</td>
-													<td>Agile Data Science</td>
-													<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-												</tr>
-												<tr>
-													<td class="date">28 Feb 2017</td>
-													<td>In massa libero interdum</td>
-													<td>Agile Data Science</td>
-													<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-												</tr>
-												<tr>
-													<td class="date">28 Feb 2017</td>
-													<td>In massa libero interdum</td>
-													<td>Agile Data Science</td>
-													<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-												</tr>
-												<tr>
-													<td class="date">28 Feb 2017</td>
-													<td>In massa libero interdum</td>
-													<td>Agile Data Science</td>
-													<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-												</tr>
-												<tr>
-													<td class="date">28 Feb 2017</td>
-													<td>In massa libero interdum</td>
-													<td>Agile Data Science</td>
-													<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
-												</tr>
-												<tr>
-													<td class="date">28 Feb 2017</td>
-													<td>In massa libero interdum</td>
-													<td>Agile Data Science</td>
-													<td>Agile Data Science 2.0 outlines a data science and software methodology.</td>
+													<td><a href="https://www.slideshare.net/rjurney/agile-data-science-20">Discussing the agile development of full-stack analytics application.</a></td>
 												</tr>
 											</tbody>
 										</table>
