Added Office Hour at Strata talk to talks.html & talks/index.html

--- a/talks.html
+++ b/talks.html
@@ -249,6 +249,12 @@
 													<td>How to wrangle PySpark scripts into a full blown analytics application using Airflow.</td>
 												</tr>
 												<tr>
+													<td class="date">Mar 16, 2017</td>
+													<td><a href="https://conferences.oreilly.com/strata/strata-ca/public/schedule/detail/58921">Office Hour with Russell Jurney at O'Reilly Strata in San Jose</a></td>
+													<td>Agile Data Science 2.0</td>
+													<td>The creation, deployment, and iterative improvement of a real-time predictive system using Python, Spark MLlib, Spark Streaming, Kafka, MongoDB, and JQuery.</td>
+												</tr>
+												<tr>
 													<td class="date">Apr 13, 2017</td>
 													<td><a href="https://www.meetup.com/Metis-San-Francisco-Data-Science/">Metis San Francisco Data Science</a></td>
 													<td>Agile Data Science</td>
