--- a/talks/index.html
+++ b/talks/index.html
@@ -249,6 +249,12 @@
 													<td>How to wrangle PySpark scripts into a full blown analytics application using Airflow.</td>
 												</tr>
 												<tr>
+													<td class="date">Mar 15, 2017</td>
+													<td>O'Reilly Strata San Jose</td>
+													<td>Track Host, Room 210 A/E</td>
+													<td>I will be introducing speakers and entertaining the audience on Wednesday in room 210 A/E.</td>
+												</tr>
+												<tr>
 													<td class="date">Mar 16, 2017</td>
 													<td><a href="https://conferences.oreilly.com/strata/strata-ca/public/schedule/detail/58921">Office Hour with Russell Jurney at O'Reilly Strata in San Jose</a></td>
 													<td>Agile Data Science 2.0</td>
