--- a/talks/index.html
+++ b/talks/index.html
@@ -230,14 +230,14 @@
 													<td>Introduction to PySpark</td>
 													<td><a href="https://www.slideshare.net/rjurney/introduction-to-pyspark">An introduction to data processing and machine learning with Apache PySpark.</a></td>
 												</tr>
-												<tr class="active">
+												<tr class="date">
 													<td class="date">Feb 24, 2017</td>
 													<td><a href="https://www.meetup.com/Big-Data-Science/events/234127846/">Big Data Science Meetup</a></td>
 													<td>Agile Data Science</td>
 													<td><a href="https://www.slideshare.net/rjurney/agile-data-science-20">Discussing the agile development of full-stack analytics application.</a></td>
 												</tr>
 												<tr>
-													<td class="date">Mar 3, 2017</td>
+													<td class="active">Mar 3, 2017</td>
 													<td><a href="https://www.meetup.com/SF-Data-Science/">SF Data Science Meetup</a></td>
 													<td>Agile Data Science</td>
 													<td><a href="https://www.slideshare.net/rjurney/agile-data-science-20">Discussing the agile development of full-stack analytics application.</a></td>
